# hesp

./: .gitignore  Makefile  README  README.md  ex01.scm  force.cl  guile-opencl.c  hesp  hesp-start  hesp.c  hesp.scm  iconv.scm  kernels.cl  parfile  read-string.scm  scale-kernel.cl
guile-opencl/: .gitignore  AUTHORS  Makefile  Makefile.am  README  TODO  base.c  base.h  buffer.c  configure.ac  context.c  context.h  conversion.c  conversion.h  error.c  error.h  event.h  guile-opencl.h  guile_opencl.h  image.c  image.h  info.c  info.h  init.c  init.h  kernel.c  kernel.h  platform.c  platform.h  print.c  print.h  program.c  program.h  queue.c  scm_cl_constants.c  scm_cl_constants.h  scm_cl_info.c  scm_cl_info.h  scm_cl_predicates.c  scm_cl_predicates.h  (+1 more)
guile-opencl/m4/: ax_have_opencl.m4
guile-opencl/modules/: Makefile.am  guile-opencl.scm
guile-opencl/src/: Makefile.am  buffer.c  buffer.h  constants.c  constants.h  context.c  context.h  conversion.c  conversion.h  device.c  device.h  error.c  error.h  event.c  event.h  guile-opencl.h  info.c  info.h  init.c  init.h  kernel.c  kernel.h  platform.c  predicates.c  predicates.h  print.c  program.c  program.h  queue.c  queue.h  sampler.c  sampler.h
guile-opencl/testsuite/: Makefile.am  info.scm  kernel.scm  predicates.scm
guile-opencl/testsuite/functions/: cl-info.scm  get-cl-platforms.scm  make-cl-buffer.scm  make-cl-context.scm
guile-opencl/testsuite/usage/: kernel-invocation.scm
ref2/input/: blocks_big.txt  grid.in  grid.par  periodicity.in  periodicity.par
